pre-pi updates - 12-3-16

--- a/WebContent/footer.xhtml
+++ b/WebContent/footer.xhtml
@@ -17,8 +17,8 @@
 	        <a href="faces/home.xhtml">Home</a><i class="fi-home"></i>
 	        <a href="#">About</a><i class="fi-torsos-all"></i>
 	        <a href="faces/necHistory.xhtml">Stats</a><i class="fi-graph-bar"></i>
-	        <a href="#">FAQ</a><i class="fi-info"></i>
-	        <a href="#">Contact</a><i class="fi-mail"></i>
+	        <a href="faces/faqPage.xhtml">FAQ</a><i class="fi-info"></i>
+	        <a href="mailto:nectrackerpro@gmail.com">Contact</a><i class="fi-mail"></i>
 	      </p>
 	      <p class="copywrite">Proudly tracking since 2016!</p>
 	    </div>
@@ -35,15 +35,10 @@
 	      							 family and NFL fans to vie for the eponymous trophy, the victor earning
 	      							 the right to be called "Commish" and inscribe their name on it for all to witness...
 	      							 or really we just try to not suck at picking football games </p>
-	      <ul class="inline-list social">
-	        <a href="#"><i class="fi-social-facebook"></i></a>
-	        <a href="#"><i class="fi-social-twitter"></i></a>
-	        <a href="#"><i class="fi-social-linkedin"></i></a>
-	        <a href="#"><i class="fi-social-github"></i></a>
-	      </ul>
 	    </div>
 	  </div>
 	</footer>
 </h:body>	
 
 </html>
+
