--- a/WebContent/home.xhtml
+++ b/WebContent/home.xhtml
@@ -35,6 +35,7 @@
 			        					  blogstyle="other-games" />
 			        </ui:fragment>
 		        </p:panel>
+		        <p:poll interval="120" update="@form" />
 			</h:form>
 		</ui:define>
 		<ui:define name="sidebar" >
