--- a/WebContent/footer.xhtml
+++ b/WebContent/footer.xhtml
@@ -15,7 +15,7 @@
 	      <p class="logo"><i class="fi-shield"></i> NEC Tracker PRO</p>
 	      <p class="footer-links">
 	        <a href="faces/home.xhtml">Home</a><i class="fi-home"></i>
-	        <a href="#">About</a><i class="fi-torsos-all"></i>
+	        <a href="faces/aboutNEC.xhtml">About</a><i class="fi-torsos-all"></i>
 	        <a href="faces/necHistory.xhtml">Stats</a><i class="fi-graph-bar"></i>
 	        <a href="faces/faqPage.xhtml">FAQ</a><i class="fi-info"></i>
 	        <a href="mailto:nectrackerpro@gmail.com">Contact</a><i class="fi-mail"></i>
