--- a/WebContent/inlinedEmail.html
+++ b/WebContent/inlinedEmail.html
@@ -391,7 +391,7 @@
                             <tbody>
                               <tr style="padding: 0; text-align: left; vertical-align: top;">
                                 <th class="callout-inner secondary" style="Margin: 0; background: #ebebeb; border: 1px solid #444444; color: #0a0a0a; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 1.3; margin: 0; padding: 10px; text-align: left; width: 100%;">
-                                Updated scores and live-game tracking available at <a href="#" style="Margin: 0; color: #2199e8; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 1.3; margin: 0; padding: 0; text-align: left; text-decoration: none;">www.nectrackerpro.com</a>,
+                                Updated scores and live-game tracking available at <a href="http://www.nectrackerpro.com:8080/NECTrackerPro" style="Margin: 0; color: #2199e8; font-family: Helvetica, Arial, sans-serif; font-weight: normal; line-height: 1.3; margin: 0; padding: 0; text-align: left; text-decoration: none;">www.nectrackerpro.com</a>,
                                   along with detailed statistics for both Players and Teams. See how you're picking today!</th>
                                 <th class="expander" style="Margin: 0; color: #0a0a0a; font-family: Helvetica, Arial, sans-serif; font-size: 16px; font-weight: normal; line-height: 1.3; margin: 0; padding: 0 !important; text-align: left; visibility: hidden; width: 0;"></th>
                               </tr>
@@ -481,6 +481,7 @@
               </tr>
             </tbody>
           </table>
+          <!-- 
           <center data-parsed="" style="min-width: 580px; width: 100%;">
             <table align="center" class="menu float-center" style="Margin: 0 auto; border-collapse: collapse; border-spacing: 0; float: none; margin: 0 auto; padding: 0; text-align: center; vertical-align: top; width: auto !important;">
               <tbody>
@@ -500,6 +501,7 @@
               </tbody>
             </table>
           </center>
+          -->
         </td>
       </tr>
     </tbody>
